CHANGES
=======

0.9.2
-----

* minor vis improvements and cleanup
* more setup
* updated readme further
* Update setup.cfg
* formality
* explicit inclusion of readme
* further readme drama
* minor dist changes
* git upload update changed to linux
* Delete python-package.yml
* PyPi changes
* Update github\_build.yml
* Update github\_build.yml
* Rename github\_build to github\_build.yml
* Create github\_build

0.9.1
-----

* Update python-package.yml
* Update python-package.yml
* Update python-package.yml
* Create python-package.yml
* Update setup.cfg
* Create LICENSE
* intermediate step, autoimport added, extra tests
* added licenses, some docstrings, minor fixes
* Added graph drawing
* added MinRAFGenerating Element
* debugging MiniRaf, ADDING CAT\_CON AS PROPERTY
* First Upload and new file structure
* further cleanup
* cleaned version
* removed reference
* small formal changes

0.9.0
-----

* expanded tests a bit
* whitespace as seps and stdin for cmdtool
* changed to sets
* fixed core raf, started with set implementation, made minor changes
* further refactoring, added graphML support
* some refactoring and docstrings
* made central class
* reformatting, START OF REFACTORING
* As Far as i can tell all main features are done
* started graphIO
* line parser, minor fixes, progBars
* Added the polymertool and some starting progressbars also fixed tons of small bugs
* added rest of algos
* ModelIO is working and commandlinetool works on a basic level
* continued testing
* debugged Moleculetype and Reaction and added testing
* added MinIRAFHeuristic, ModelIO, ReactionNotation and started on ArrowNotation
* removed unneccesary files and made a basic version of commandtool
* some small corrections and some more algo work
* continued work on Algorithms
* started on adding utilities started some stuff missed on reaction
* reactionSystem done
* finished Reactionsystem class except for hash functions and copies
* finished reaction and dnf classes