@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* more import cleanup
+
 0.9.2
 -----
 
